--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "expo start --tunnel",
+    "dev": "expo start --tunnel --clear",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
   },
